--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания №14\n"
    ]
   },
   {
@@ -26,7 +26,12 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "Создать базовый класс Supplier в C#, который будет представлять информацию о\n",
+    "поставщиках товаров или услуг. На основе этого класса разработать 2-3\n",
+    "производных класса, демонстрирующих принципы наследования и полиморфизма.\n",
+    "В каждом из классов должны быть реализованы новые атрибуты и методы, а также\n",
+    "переопределены некоторые методы базового класса для демонстрации\n",
+    "полиморфизма.\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам конструктора классов с использованием гетторов и сетторов и реализуйте взаимодействие объектов между собой"
@@ -53,7 +58,173 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "using System;\n",
+    "\n",
+    "class Supplier\n",
+    "{\n",
+    "    private int supplierid;\n",
+    "    private string companyname;\n",
+    "    private string producttype;\n",
+    "\n",
+    "    public Supplier(int id, string name, string type)\n",
+    "    {\n",
+    "        SupplierId = id;\n",
+    "        CompanyName = name;\n",
+    "        ProductType = type;\n",
+    "    }\n",
+    "\n",
+    "    public int SupplierId\n",
+    "    {\n",
+    "        get { return supplierid; }\n",
+    "        set { supplierid = value; }\n",
+    "    }\n",
+    "\n",
+    "    public string CompanyName\n",
+    "    {\n",
+    "        get { return companyname; }\n",
+    "        set { companyname = value; }\n",
+    "    }\n",
+    "\n",
+    "    public string ProductType\n",
+    "    {\n",
+    "        get { return producttype; }\n",
+    "        set { producttype = value; }\n",
+    "    }\n",
+    "\n",
+    "    public virtual void GetCompanyInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID поставщика: {supplierid}; Название компании: {companyname}; Тип продукции: {producttype}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void ProvideQuote()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Предоставление котировки на товары или услуги.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void SubmitOrder()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Отправка заказа поставщику.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Manufacturer : Supplier\n",
+    "{\n",
+    "    private int foundedyear;\n",
+    "\n",
+    "    public Manufacturer(int id, string name, string type, int year)\n",
+    "        : base(id, name, type)\n",
+    "    {\n",
+    "        FoundedYear = year;\n",
+    "    }\n",
+    "\n",
+    "    public int FoundedYear\n",
+    "    {\n",
+    "        get { return foundedyear; }\n",
+    "        set { foundedyear = value; }\n",
+    "    }\n",
+    "\n",
+    "    public override void ProvideQuote()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Год основания компании {foundedyear}.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Retailer : Supplier\n",
+    "{\n",
+    "    private string storelocation;\n",
+    "\n",
+    "    public Retailer(int id, string name, string type, string location)\n",
+    "        : base(id, name, type)\n",
+    "    {\n",
+    "        StoreLocation = location;\n",
+    "    }\n",
+    "\n",
+    "    public string StoreLocation\n",
+    "    {\n",
+    "        get { return storelocation; }\n",
+    "        set { storelocation = value; }\n",
+    "    }\n",
+    "\n",
+    "    public override void SubmitOrder()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Отправка заказа по адресу: {storelocation}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Importer : Supplier\n",
+    "{\n",
+    "    private string origincountry;\n",
+    "\n",
+    "    public Importer(int id, string name, string type, string country)\n",
+    "        : base(id, name, type)\n",
+    "    {\n",
+    "        OriginCountry = country;\n",
+    "    }\n",
+    "\n",
+    "    public string OriginCountry\n",
+    "    {\n",
+    "        get { return origincountry; }\n",
+    "        set { origincountry = value; }\n",
+    "    }\n",
+    "\n",
+    "    public override void GetCompanyInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ID поставщика: {SupplierId}. Название компании: {CompanyName}. Тип продукции: {ProductType}. Страна производства: {origincountry}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Пример взаимодействия между объектами\n",
+    "class Program\n",
+    "{\n",
+    "    static void Main(string[] args)\n",
+    "    {\n",
+    "        // Создание объектов\n",
+    "        Supplier supplier = new Supplier(3, \"Silent Hill\", \"Видеоигры\");\n",
+    "        supplier.GetCompanyInfo();\n",
+    "        supplier.ProvideQuote();\n",
+    "        supplier.SubmitOrder();\n",
+    "\n",
+    "        Console.WriteLine();\n",
+    "\n",
+    "        Manufacturer manufacturer = new Manufacturer(15, \"Biohazard\", \"Биологическое оружие\", 2001);\n",
+    "        manufacturer.GetCompanyInfo();\n",
+    "        manufacturer.ProvideQuote();\n",
+    "        manufacturer.SubmitOrder();\n",
+    "\n",
+    "        Console.WriteLine();\n",
+    "\n",
+    "        Retailer retailer = new Retailer(28, \"CyberLife\", \"Роботы\", \"Детроит\");\n",
+    "        retailer.GetCompanyInfo();\n",
+    "        retailer.ProvideQuote();\n",
+    "        retailer.SubmitOrder();\n",
+    "\n",
+    "        Console.WriteLine();\n",
+    "\n",
+    "        Importer importer = new Importer(52, \"Балдёж\", \"Пиво\", \"Норвегия\");\n",
+    "        importer.GetCompanyInfo();\n",
+    "        importer.ProvideQuote();\n",
+    "        importer.SubmitOrder();\n",
+    "\n",
+    "        Console.WriteLine();\n",
+    "\n",
+    "        // Взаимодействие между объектами\n",
+    "        Console.WriteLine(\"Взаимодействие между объектами:\");\n",
+    "\n",
+    "        // Например, розничный продавец может сделать заказ у производителя\n",
+    "        Console.WriteLine($\"Розничный продавец {retailer.CompanyName} делает заказ у производителя {manufacturer.CompanyName}.\");\n",
+    "        manufacturer.ProvideQuote();\n",
+    "        retailer.SubmitOrder();\n",
+    "\n",
+    "        Console.WriteLine();\n",
+    "\n",
+    "        // Импортер предлагает свою продукцию\n",
+    "        Console.WriteLine($\"Импортер {importer.CompanyName} предлагает свою продукцию {importer.ProductType}.\");\n",
+    "        supplier.ProvideQuote();\n",
+    "        importer.SubmitOrder();\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
