--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -57,7 +57,38 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID поставщика: 3; Название компании: Silent Hill; Тип продукции: Видеоигры\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "ID поставщика: 15; Название компании: Biohazard; Тип продукции: Биологическое оружие\n",
+      "Год основания компании 2001.\n",
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "ID поставщика: 28; Название компании: CyberLife; Тип продукции: Роботы\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа по адресу: Детроит\n",
+      "\n",
+      "ID поставщика: 52. Название компании: Балдёж. Тип продукции: Пиво. Страна производства: Норвегия\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "Взаимодействие между объектами:\n",
+      "Розничный продавец CyberLife делает заказ у производителя Biohazard.\n",
+      "Год основания компании 2001.\n",
+      "Отправка заказа по адресу: Детроит\n",
+      "\n",
+      "Импортер Балдёж предлагает свою продукцию Пиво.\n",
+      "Предоставление котировки на товары или услуги.\n",
+      "Отправка заказа поставщику.\n"
+     ]
+    }
+   ],
    "source": [
     "using System;\n",
     "\n",
@@ -174,56 +205,50 @@
     "    }\n",
     "}\n",
     "\n",
-    "// Пример взаимодействия между объектами\n",
-    "class Program\n",
-    "{\n",
-    "    static void Main(string[] args)\n",
-    "    {\n",
-    "        // Создание объектов\n",
-    "        Supplier supplier = new Supplier(3, \"Silent Hill\", \"Видеоигры\");\n",
-    "        supplier.GetCompanyInfo();\n",
-    "        supplier.ProvideQuote();\n",
-    "        supplier.SubmitOrder();\n",
     "\n",
-    "        Console.WriteLine();\n",
+    "// Создание объектов\n",
+    "    Supplier supplier = new Supplier(3, \"Silent Hill\", \"Видеоигры\");\n",
+    "    supplier.GetCompanyInfo();\n",
+    "    supplier.ProvideQuote();\n",
+    "    supplier.SubmitOrder();\n",
     "\n",
-    "        Manufacturer manufacturer = new Manufacturer(15, \"Biohazard\", \"Биологическое оружие\", 2001);\n",
-    "        manufacturer.GetCompanyInfo();\n",
-    "        manufacturer.ProvideQuote();\n",
-    "        manufacturer.SubmitOrder();\n",
+    "    Console.WriteLine();\n",
     "\n",
-    "        Console.WriteLine();\n",
+    "    Manufacturer manufacturer = new Manufacturer(15, \"Biohazard\", \"Биологическое оружие\", 2001);\n",
+    "    manufacturer.GetCompanyInfo();\n",
+    "    manufacturer.ProvideQuote();\n",
+    "    manufacturer.SubmitOrder();\n",
     "\n",
-    "        Retailer retailer = new Retailer(28, \"CyberLife\", \"Роботы\", \"Детроит\");\n",
-    "        retailer.GetCompanyInfo();\n",
-    "        retailer.ProvideQuote();\n",
-    "        retailer.SubmitOrder();\n",
+    "    Console.WriteLine();\n",
     "\n",
-    "        Console.WriteLine();\n",
+    "    Retailer retailer = new Retailer(28, \"CyberLife\", \"Роботы\", \"Детроит\");\n",
+    "    retailer.GetCompanyInfo();\n",
+    "    retailer.ProvideQuote();\n",
+    "    retailer.SubmitOrder();\n",
     "\n",
-    "        Importer importer = new Importer(52, \"Балдёж\", \"Пиво\", \"Норвегия\");\n",
-    "        importer.GetCompanyInfo();\n",
-    "        importer.ProvideQuote();\n",
-    "        importer.SubmitOrder();\n",
+    "    Console.WriteLine();\n",
     "\n",
-    "        Console.WriteLine();\n",
+    "    Importer importer = new Importer(52, \"Балдёж\", \"Пиво\", \"Норвегия\");\n",
+    "    importer.GetCompanyInfo();\n",
+    "    importer.ProvideQuote();\n",
+    "    importer.SubmitOrder();\n",
     "\n",
-    "        // Взаимодействие между объектами\n",
-    "        Console.WriteLine(\"Взаимодействие между объектами:\");\n",
+    "    Console.WriteLine();\n",
     "\n",
-    "        // Например, розничный продавец может сделать заказ у производителя\n",
-    "        Console.WriteLine($\"Розничный продавец {retailer.CompanyName} делает заказ у производителя {manufacturer.CompanyName}.\");\n",
-    "        manufacturer.ProvideQuote();\n",
-    "        retailer.SubmitOrder();\n",
+    "    // Взаимодействие между объектами\n",
+    "    Console.WriteLine(\"Взаимодействие между объектами:\");\n",
     "\n",
-    "        Console.WriteLine();\n",
+    "    // Например, розничный продавец может сделать заказ у производителя\n",
+    "    Console.WriteLine($\"Розничный продавец {retailer.CompanyName} делает заказ у производителя {manufacturer.CompanyName}.\");\n",
+    "    manufacturer.ProvideQuote();\n",
+    "    retailer.SubmitOrder();\n",
     "\n",
-    "        // Импортер предлагает свою продукцию\n",
-    "        Console.WriteLine($\"Импортер {importer.CompanyName} предлагает свою продукцию {importer.ProductType}.\");\n",
-    "        supplier.ProvideQuote();\n",
-    "        importer.SubmitOrder();\n",
-    "    }\n",
-    "}"
+    "    Console.WriteLine();\n",
+    "\n",
+    "    // Импортер предлагает свою продукцию\n",
+    "    Console.WriteLine($\"Импортер {importer.CompanyName} предлагает свою продукцию {importer.ProductType}.\");\n",
+    "    supplier.ProvideQuote();\n",
+    "    importer.SubmitOrder();"
    ]
   }
  ],
