--- a/Sprint2/Task1.ipynb
+++ b/Sprint2/Task1.ipynb
@@ -156,8 +156,96 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Производитель: Toyota, Модель: Corolla\n",
+      "Двери: 4\n",
+      "Производитель: Ferrari, Модель: 488 Spider\n",
+      "Двери: 2\n",
+      "Автомобиль с откидным верхом: True\n",
+      "Производитель: Ducati, Модель: Panigale V4\n",
+      "Тип двигателя: V4\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "\n",
+    "    public Vehicle(string make, string model)\n",
+    "    {\n",
+    "        Make = make;\n",
+    "        Model = model;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Производитель: {Make}, Модель: {Model}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int Doors { get; set; }\n",
+    "\n",
+    "    public Car(string make, string model, int doors) : base(make, model)\n",
+    "    {\n",
+    "        Doors = doors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Двери: {Doors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class SportCar : Car\n",
+    "{\n",
+    "    public bool IsConvertible { get; set; }\n",
+    "\n",
+    "    public SportCar(string make, string model, int doors, bool isConvertible) : base(make, model, doors)\n",
+    "    {\n",
+    "        IsConvertible = isConvertible;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Автомобиль с откидным верхом: {IsConvertible}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public string EngineType { get; set; }\n",
+    "\n",
+    "    public Motorcycle(string make, string model, string engineType) : base(make, model)\n",
+    "    {\n",
+    "        EngineType = engineType;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Тип двигателя: {EngineType}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car myCar = new Car(\"Toyota\", \"Corolla\", 4);\n",
+    "myCar.DisplayInfo();\n",
+    "\n",
+    "SportCar mySportCar = new SportCar(\"Ferrari\", \"488 Spider\", 2, true);\n",
+    "mySportCar.DisplayInfo();\n",
+    "\n",
+    "Motorcycle myMotorcycle = new Motorcycle(\"Ducati\", \"Panigale V4\", \"V4\");\n",
+    "myMotorcycle.DisplayInfo();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,8 +269,117 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вид животного: Млекопитающее, Живет: Америка\n",
+      "Возраст: 5\n",
+      "Вид животного: Млекопитающее, Живет: Россия\n",
+      "Порода: Корги\n",
+      "Вид животного: Млекопитающее, Живет: Франция\n",
+      "Порода: Лабрадор-Ретривер\n",
+      "Охотничья: True\n",
+      "Вид животного: Пернатые, Живет: Бразилия\n",
+      "Цвет: Коричневый\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public string Type { get; set; }\n",
+    "    public string Live { get; set; }\n",
+    "\n",
+    "    public Animal(string type, string live)\n",
+    "    {\n",
+    "        Type = type;\n",
+    "        Live = live;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вид животного: {Type}, Живет: {Live}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Cat(string type, string live, int age) : base(type, live)\n",
+    "    {\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Возраст: {Age}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string type, string live, string breed) : base(type, live)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Hunter : Dog\n",
+    "{\n",
+    "    public bool IsHunter { get; set; }\n",
+    "\n",
+    "    public Hunter(string type, string live, string breed, bool isHunter) : base(type, live, breed)\n",
+    "    {\n",
+    "        IsHunter = isHunter;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Охотничья: {IsHunter}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Bird(string type, string live, string color) : base(type, live)\n",
+    "    {\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Цвет: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat(\"Млекопитающее\", \"Америка\", 5);\n",
+    "myCat.DisplayInfo();\n",
+    "\n",
+    "Dog myDog = new Dog(\"Млекопитающее\", \"Россия\", \"Корги\");\n",
+    "myDog.DisplayInfo();\n",
+    "\n",
+    "Hunter myHunter = new Hunter(\"Млекопитающее\", \"Франция\", \"Лабрадор-Ретривер\", true);\n",
+    "myHunter.DisplayInfo();\n",
+    "\n",
+    "Bird myBird = new Bird(\"Пернатые\", \"Бразилия\", \"Коричневый\");\n",
+    "myBird.DisplayInfo();"
+   ]
   }
  ],
  "metadata": {
