--- a/Sprint2/Task2.ipynb
+++ b/Sprint2/Task2.ipynb
@@ -299,7 +299,68 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public abstract class Vehicle\n",
+    "{\n",
+    "    public int Speed { get; set; }\n",
+    "\n",
+    "    protected Vehicle()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспортное средство движется.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface ICar\n",
+    "{\n",
+    "    void Honk();\n",
+    "}\n",
+    "\n",
+    "public interface IMotorcycle\n",
+    "{\n",
+    "    void Wheelie();\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle, ICar\n",
+    "{\n",
+    "    public Car() : base()\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public void Honk()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль издает звук сигнала клаксона\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        base.Move();\n",
+    "        Console.WriteLine(\"Автомобиль движется со скоростью \" + Speed);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle, IMotorcycle\n",
+    "{\n",
+    "    public Motorcycle() : base()\n",
+    "    {\n",
+    "    }\n",
+    "\n",
+    "    public void Wheelie()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоциклист выполняет трюк 'колесо'\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        base.Move();\n",
+    "        Console.WriteLine(\"Мотоцикл движется со скоростью \" + Speed);\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,8 +384,96 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот: Вид животного: Млекопитающее, Проживает: Америка, Возраст: 2\n",
+      "Собака: Вид животного: Млекопитающие, Проживает: Япония, Порода: Доберман\n",
+      "Птица: Вид животного: Пернатые, Проживает: Испания, Цвет: Красный\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    string Type { get; set; }\n",
+    "    string Live { get; set; }\n",
+    "    void DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "public interface IBreeded\n",
+    "{\n",
+    "    string Breed { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class Cat : IAnimal\n",
+    "{\n",
+    "    public string Type { get; set; }\n",
+    "    public string Live { get; set; }\n",
+    "    public int Age { get; set; }\n",
+    "\n",
+    "    public Cat(string type, string live, int age)\n",
+    "    {\n",
+    "        Type = type;\n",
+    "        Live = live;\n",
+    "        Age = age;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Кот: Вид животного: {Type}, Проживает: {Live}, Возраст: {Age}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : IAnimal, IBreeded\n",
+    "{\n",
+    "    public string Type { get; set; }\n",
+    "    public string Live { get; set; }\n",
+    "    public string Breed { get; set; }\n",
+    "\n",
+    "    public Dog(string type, string live, string breed)\n",
+    "    {\n",
+    "        Type = type;\n",
+    "        Live = live;\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Собака: Вид животного: {Type}, Проживает: {Live}, Порода: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : IAnimal\n",
+    "{\n",
+    "    public string Type { get; set; }\n",
+    "    public string Live { get; set; }\n",
+    "    public string Color { get; set; }\n",
+    "\n",
+    "    public Bird(string type, string live, string color)\n",
+    "    {\n",
+    "        Type = type;\n",
+    "        Live = live;\n",
+    "        Color = color;\n",
+    "    }\n",
+    "\n",
+    "    public void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Птица: Вид животного: {Type}, Проживает: {Live}, Цвет: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat(\"Млекопитающее\", \"Америка\", 2);\n",
+    "myCat.DisplayInfo();\n",
+    "\n",
+    "Dog myDog = new Dog(\"Млекопитающие\", \"Япония\", \"Доберман\");\n",
+    "myDog.DisplayInfo();\n",
+    "\n",
+    "Bird myBird = new Bird(\"Пернатые\", \"Испания\", \"Красный\");\n",
+    "myBird.DisplayInfo();"
+   ]
   }
  ],
  "metadata": {
