--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -177,7 +177,7 @@
     "importer.origincountry = \"Норвегия\";\n",
     "importer.supplierid = 52;\n",
     "importer.companyname = \"Балдёж\";\n",
-    "importer.producttype = \"Пиво\";\n",
+    "importer.producttype = \"Шоколад\";\n",
     "\n",
     "importer.GetCompanyInfo();\n",
     "importer.ProvideQuote();\n",
