--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -209,35 +209,59 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Черный\n",
+      "Количество транспорта: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "public class Vehicle\n",
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Accelerate(int speed);\n",
+    "}\n",
+    "\n",
+    "public class Vehicle : IVehicle\n",
     "{\n",
     "    public string Color { get; set; }\n",
-    "    public int Speed { get; set; }\n",
+    "    protected int Speed { get; set; }\n",
+    "    public static int TotalVehicles { get; private set; }\n",
+    "    private int _fuelLevel;\n",
+    "\n",
+    "    public void Refuel(int amount)\n",
+    "    {\n",
+    "        _fuelLevel += amount;\n",
+    "    }\n",
+    "\n",
+    "    public Vehicle()\n",
+    "    {\n",
+    "        TotalVehicles++;\n",
+    "    }\n",
     "\n",
     "    public void Accelerate(int speed)\n",
     "    {\n",
     "        Speed += speed;\n",
     "    }\n",
+    "\n",
     "}\n",
     "\n",
-    "public class Car : Vehicle\n",
+    "public class Car : Vehicle, IVehicle\n",
     "{\n",
-    "    public Car() : base()\n",
-    "    {\n",
-    "    }\n",
-    "\n",
     "    public Car(string color) : base()\n",
     "    {\n",
     "        Color = color;\n",
     "    }\n",
     "}\n",
     "\n",
-    "public interface IVehicle\n",
-    "{\n",
-    "    void Accelerate(int speed);\n",
-    "}"
+    "Car myCar = new Car(\"Черный\");\n",
+    "Console.WriteLine(myCar.Color);\n",
+    "myCar.Refuel(15);\n",
+    "myCar.Accelerate(60);\n",
+    "Console.WriteLine($\"Количество транспорта: {Vehicle.TotalVehicles}\");"
    ]
   },
   {
@@ -267,107 +291,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lion is moving.\n",
-      "Lion makes a sound.\n",
-      "Animal Name: Lion, Age: 5\n",
-      "Buddy is moving.\n",
-      "Buddy, the Golden Retriever, barks!\n",
-      "Dog Name: Buddy, Age: 3, Breed: Golden Retriever\n",
-      "Total Animals: 0\n"
+      "Количество животных: 1\n",
+      "Это Лев. Его цвет рыжий.\n",
+      "Лев идёт.\n",
+      "\n",
+      "Количество животных: 2\n",
+      "Это Попугай. Его цвет зелёный.\n",
+      "Попугай летит.\n",
+      "\n",
+      "Количество животных: 3\n",
+      "Это Змея. Её цвет чёрный.\n",
+      "Змея ползёт.\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "public interface IAnimal\n",
     "{\n",
-    "    void MakeSound(); \n",
+    "    string Move();\n",
     "}\n",
     "\n",
     "public class Animal : IAnimal\n",
     "{\n",
-    "    private string _name; \n",
-    "    private int _age;\n",
+    "    public string Name { get; set; }\n",
+    "    public string Color { get; set; }\n",
+    "    public static int TotalAnimal { get; private set; }\n",
     "\n",
-    "    public static int TotalAnimals { get; private set; }\n",
-    "\n",
-    "    public Animal()\n",
+    "    public Animal(string name, string color) : base()\n",
     "    {\n",
-    "        TotalAnimals++; \n",
+    "        Name = name;\n",
+    "        Color = color;\n",
+    "        TotalAnimal++;\n",
+    "        Console.WriteLine($\"Количество животных: {TotalAnimal}\");\n",
     "    }\n",
     "\n",
-    "    public Animal(string name, int age)\n",
+    "    public virtual string Info()\n",
     "    {\n",
-    "        _name = name;\n",
-    "        _age = age;\n",
+    "        return $\"Это {Name}. Его цвет {Color}.\";\n",
     "    }\n",
     "\n",
-    "    public string Name\n",
+    "    public virtual string Move()\n",
     "    {\n",
-    "        get { return _name; }\n",
-    "        set { _name = value; }\n",
-    "    }\n",
-    "\n",
-    "    public int Age\n",
-    "    {\n",
-    "        get { return _age; }\n",
-    "        set { _age = value; }\n",
-    "    }\n",
-    "\n",
-    "    public void Move()\n",
-    "    {\n",
-    "        Console.WriteLine($\"{_name} is moving.\");\n",
-    "    }\n",
-    "\n",
-    "    public virtual void MakeSound()\n",
-    "    {\n",
-    "        Console.WriteLine($\"{_name} makes a sound.\");\n",
-    "    }\n",
-    "\n",
-    "    public string GetInfo()\n",
-    "    {\n",
-    "        return $\"Animal Name: {_name}, Age: {_age}\";\n",
+    "        return $\"{Name} движется.\";\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Dog : Animal\n",
+    "public class Lion : Animal, IAnimal\n",
     "{\n",
-    "    private string _breed; \n",
-    "\n",
-    "    public Dog() : base() { }\n",
-    "\n",
-    "    public Dog(string name, int age, string breed) : base(name, age)\n",
+    "    public Lion(string name, string color) : base(name, color)\n",
     "    {\n",
-    "        _breed = breed;\n",
+    "\n",
     "    }\n",
     "\n",
-    "    public string Breed\n",
+    "    public override string Move()\n",
     "    {\n",
-    "        get { return _breed; }\n",
-    "        set { _breed = value; }\n",
+    "        return $\"{Name} идёт.\";\n",
     "    }\n",
     "\n",
-    "    public override void MakeSound()\n",
-    "    {\n",
-    "        Console.WriteLine($\"{Name}, the {_breed}, barks!\");\n",
-    "    }\n",
-    "\n",
-    "    public new string GetInfo()\n",
-    "    {\n",
-    "        return $\"Dog Name: {Name}, Age: {Age}, Breed: {_breed}\";\n",
-    "    }\n",
     "}\n",
     "\n",
-    "        Animal animal = new Animal(\"Lion\", 5);\n",
-    "        animal.Move();\n",
-    "        animal.MakeSound();\n",
-    "        Console.WriteLine(animal.GetInfo());\n",
+    "public class Parrot : Animal, IAnimal\n",
+    "{\n",
+    "    public Parrot(string name, string color) : base(name, color)\n",
+    "    {\n",
     "\n",
-    "        Dog dog = new Dog(\"Buddy\", 3, \"Golden Retriever\");\n",
-    "        dog.Move();\n",
-    "        dog.MakeSound();\n",
-    "        Console.WriteLine(dog.GetInfo());\n",
+    "    }\n",
     "\n",
-    "        Console.WriteLine($\"Total Animals: {Animal.TotalAnimals}\");"
+    "    public override string Move()\n",
+    "    {\n",
+    "        return $\"{Name} летит.\";\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Snake : Animal, IAnimal\n",
+    "{\n",
+    "    public Snake(string name, string color) : base(name, color)\n",
+    "    {\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public override string Move()\n",
+    "    {\n",
+    "        return $\"{Name} ползёт.\";\n",
+    "    }\n",
+    "\n",
+    "    public override string Info()\n",
+    "    {\n",
+    "        return $\"Это {Name}. Её цвет {Color}.\";\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Lion myLion = new Lion(\"Лев\", \"рыжий\");\n",
+    "Console.WriteLine(myLion.Info());\n",
+    "Console.WriteLine(myLion.Move());\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Parrot myParrot = new Parrot(\"Попугай\", \"зелёный\");\n",
+    "Console.WriteLine(myParrot.Info());\n",
+    "Console.WriteLine(myParrot.Move());\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Snake mySnake = new Snake(\"Змея\", \"чёрный\");\n",
+    "Console.WriteLine(mySnake.Info());\n",
+    "Console.WriteLine(mySnake.Move());\n",
+    "Console.WriteLine();"
    ]
   }
  ],
