--- a/Sprint1/Task1.ipynb
+++ b/Sprint1/Task1.ipynb
@@ -136,21 +136,30 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Цвет автомобиля: Красный\n",
+      "Текущая скорость: 60 км/ч\n",
+      "Уровень топлива: 65%\n",
+      "Общее количество транспортных средств: 1\n"
+     ]
+    }
+   ],
    "source": [
     "public class Vehicle\n",
     "{\n",
     "    private string _color;\n",
     "    private int _speed;\n",
     "\n",
-    "    // Свойство Color с геттером и сеттером\n",
     "    public string Color\n",
     "    {\n",
     "        get { return _color; }\n",
     "        set { _color = value; }\n",
     "    }\n",
     "\n",
-    "    // Свойство Speed с геттером и сеттером\n",
     "    public int Speed\n",
     "    {\n",
     "        get { return _speed; }\n",
@@ -163,51 +172,62 @@
     "        }\n",
     "    }\n",
     "\n",
-    "    // Статический атрибут\n",
     "    public static int TotalVehicles { get; private set; } = 0;\n",
     "\n",
-    "    // Конструктор\n",
     "    public Vehicle()\n",
     "    {\n",
     "        TotalVehicles++;\n",
     "    }\n",
     "\n",
-    "    // Обычный метод\n",
     "    public void Accelerate(int delta)\n",
     "    {\n",
     "        Speed += delta;\n",
     "    }\n",
     "\n",
-    "    // Статический метод\n",
     "    public static void DisplayTotalVehicles()\n",
     "    {\n",
     "        Console.WriteLine($\"Общее количество транспортных средств: {TotalVehicles}\");\n",
     "    }\n",
     "}\n",
     "\n",
+    "\n",
+    "\n",
     "public class Car : Vehicle\n",
     "{\n",
     "    private int _fuelLevel;\n",
     "\n",
-    "    // Свойство FuelLevel с геттером и сеттером\n",
+    "    \n",
     "    public int FuelLevel\n",
     "    {\n",
     "        get { return _fuelLevel; }\n",
     "        set { _fuelLevel = value; }\n",
     "    }\n",
     "\n",
-    "    // Конструктор\n",
+    "    \n",
     "    public Car() : base()\n",
     "    {\n",
-    "        FuelLevel = 100; // Задаем начальный уровень топлива\n",
+    "        FuelLevel = 50; \n",
     "    }\n",
     "\n",
-    "    // Обычный метод\n",
+    "    \n",
     "    public void Refuel(int amount)\n",
     "    {\n",
     "        FuelLevel += amount;\n",
     "    }\n",
-    "}"
+    "}\n",
+    "\n",
+    "Car myCar = new Car();\n",
+    "myCar.Refuel(15);\n",
+    "myCar.Color = \"Красный\";\n",
+    "myCar.Accelerate(60);\n",
+    "\n",
+    "      \n",
+    "Console.WriteLine($\"Цвет автомобиля: {myCar.Color}\");\n",
+    "Console.WriteLine($\"Текущая скорость: {myCar.Speed} км/ч\");\n",
+    "Console.WriteLine($\"Уровень топлива: {myCar.FuelLevel}%\");\n",
+    "\n",
+    "   \n",
+    "Vehicle.DisplayTotalVehicles();"
    ]
   },
   {
@@ -232,43 +252,128 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Количество животных: 1\n",
+      "Это Кот. Его цвет рыжий. Ему 12 лет.\n",
+      "Кот идёт.\n",
+      "\n",
+      "Количество животных: 2\n",
+      "Это Пёс. Его цвет черный. Ему 5 лет.\n",
+      "Пёс идёт.\n",
+      "\n",
+      "Количество животных: 3\n",
+      "Это Змея. Его цвет зелёный. Ему 6 лет.\n",
+      "Змея ползёт.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "public interface IAmimal\n",
+    "public interface IAnimal\n",
     "{\n",
-    "    void Accelerate(int speed);\n",
+    "    string Move();\n",
     "}\n",
     "\n",
-    "public class Animal\n",
+    "public class Animal : IAnimal\n",
     "{\n",
-    "    // Атрибуты класса\n",
+    "    private int _age;\n",
+    "    public string Name { get; set; }\n",
     "    public string Color { get; set; }\n",
-    "    protected int Speed { get; set; }\n",
     "\n",
-    "    public static int TotalAnimals { get; private set; }\n",
-    "\n",
-    "    public Animal()\n",
+    "    public int Age\n",
     "    {\n",
-    "        TotalAnimals++;\n",
+    "        get { return _age; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                _age = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Возраст не может быть отрицательным!\");\n",
+    "        }\n",
     "    }\n",
-    "    // Метод класса\n",
-    "    public void Accelerate(int speed)\n",
+    "\n",
+    "    public static int TotalAnimal { get; private set; }\n",
+    "\n",
+    "    public Animal(string name, string color, int age) : base()\n",
     "    {\n",
-    "        Speed += speed;\n",
+    "        Name = name;\n",
+    "        Color = color;\n",
+    "        Age = age;\n",
+    "        TotalAnimal++;\n",
+    "        Console.WriteLine($\"Количество животных: {TotalAnimal}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual string Info()\n",
+    "    {\n",
+    "        return $\"Это {Name}. Его цвет {Color}. Ему {Age} лет.\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual string Move()\n",
+    "    {\n",
+    "        return $\"{Name} движется.\";\n",
     "    }\n",
     "}\n",
-    "public class Cat : Animal, IAmimal\n",
+    "\n",
+    "public class Cat : Animal, IAnimal\n",
     "{\n",
-    "    public Cat(string color) : base()\n",
+    "    public Cat(string name, string color, int age) : base(name, color, age)\n",
     "    {\n",
-    "        Color = color;\n",
+    "\n",
     "    }\n",
     "\n",
-    "    void IncreaseSpeed()\n",
+    "    public override string Move()\n",
     "    {\n",
-    "        Speed += 10; \n",
+    "        return $\"{Name} идёт.\";\n",
     "    }\n",
-    "}"
+    "\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal, IAnimal\n",
+    "{\n",
+    "    public Dog(string name, string color, int age) : base(name, color, age)\n",
+    "    {\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public override string Move()\n",
+    "    {\n",
+    "        return $\"{Name} идёт.\";\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class Snake : Animal, IAnimal\n",
+    "{\n",
+    "    public Snake(string name, string color, int age) : base(name, color, age)\n",
+    "    {\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public override string Move()\n",
+    "    {\n",
+    "        return $\"{Name} ползёт.\";\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat(\"Кот\", \"рыжий\", 12);\n",
+    "Console.WriteLine(myCat.Info());\n",
+    "Console.WriteLine(myCat.Move());\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Dog myDog = new Dog(\"Пёс\", \"черный\", 5);\n",
+    "Console.WriteLine(myDog.Info());\n",
+    "Console.WriteLine(myDog.Move());\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Snake mySnake = new Snake(\"Змея\", \"зелёный\", 6);\n",
+    "Console.WriteLine(mySnake.Info());\n",
+    "Console.WriteLine(mySnake.Move());\n",
+    "Console.WriteLine();"
    ]
   }
  ],
