--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -114,8 +114,8 @@
    "source": [
     "public class Vehicle\n",
     "{\n",
-    "    public string Color { get; set; } // public свойство\n",
-    "    private int speed; // private поле\n",
+    "    public string Color { get; set; } \n",
+    "    protected int speed; \n",
     "\n",
     "    protected void SetSpeed(int value) \n",
     "    {\n",
@@ -125,30 +125,21 @@
     "\n",
     "public class Car : Vehicle\n",
     "{\n",
-    "    private int fuelLevel;\n",
+    "    private int fuelLevel; \n",
     "\n",
     "    public void Refuel(int amount) \n",
     "    {\n",
     "        fuelLevel += amount;\n",
     "    }\n",
     "\n",
-    "    protected void CheckSpeedLimit(int speed) \n",
+    "    protected void CheckSpeedLimit() \n",
     "    {\n",
     "        if (speed > 120)\n",
     "        {\n",
     "            Console.WriteLine(\"Превышен скоростной режим!\");\n",
     "        }\n",
     "    }\n",
-    "}\n",
-    "\n",
-    "Vehicle myVehicle = new Vehicle();\n",
-    "Car myCar = new Car();\n",
-    "\n",
-    "myVehicle.Color = \"Red\";\n",
-    "\n",
-    "myCar.Color = \"Blue\";\n",
-    "myCar.Refuel(100);\n",
-    "myCar.Refuel(50);"
+    "}"
    ]
   },
   {
@@ -179,27 +170,31 @@
      "output_type": "stream",
      "text": [
       "Количество животных: 1\n",
+      "Это Кот. Его цвет рыжий. Ему 12 лет.\n",
+      "Кот идёт.\n",
+      "\n",
+      "Количество животных: 2\n",
+      "Это Пёс. Его цвет черный. Ему 5 лет.\n",
+      "Пёс идёт.\n",
+      "\n",
       "Количество животных: 3\n",
-      "Животное\n",
-      "1\n",
-      "Собака\n",
-      "12\n",
-      "Мурка\n",
-      "3\n"
+      "Это Змея. Её цвет зелёный. Ей 6 лет.\n",
+      "Змея ползёт.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "public class Animal\n",
+    "public interface IAnimal\n",
     "{\n",
-    "    private string _name;\n",
-    "    private int _age;\n",
+    "    string Move();\n",
+    "}\n",
     "\n",
-    "    public string Name\n",
-    "    {\n",
-    "        get { return _name; }\n",
-    "        set { _name = value; }\n",
-    "    }\n",
+    "public class Animal : IAnimal\n",
+    "{\n",
+    "    private int _age;\n",
+    "    public string Name { get; set; }\n",
+    "    public string Color { get; set; }\n",
     "\n",
     "    public int Age\n",
     "    {\n",
@@ -213,101 +208,89 @@
     "        }\n",
     "    }\n",
     "\n",
-    "    public static int TotalAnimals { get; private set; } = 0;\n",
+    "    public static int TotalAnimal { get; private set; }\n",
     "\n",
-    "    public Animal()\n",
+    "    public Animal(string name, string color, int age) : base()\n",
     "    {\n",
-    "        TotalAnimals++;\n",
+    "        Name = name;\n",
+    "        Color = color;\n",
+    "        Age = age;\n",
+    "        TotalAnimal++;\n",
+    "        Console.WriteLine($\"Количество животных: {TotalAnimal}\");\n",
     "    }\n",
     "\n",
-    "    public static void DisplayTotalAnimals()\n",
+    "    public virtual string Info()\n",
     "    {\n",
-    "        Console.WriteLine($\"Количество животных: {TotalAnimals}\");\n",
+    "        return $\"Это {Name}. Его цвет {Color}. Ему {Age} лет.\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual string Move()\n",
+    "    {\n",
+    "        return $\"{Name} движется.\";\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class Dog : Animal\n",
+    "public class Cat : Animal, IAnimal\n",
     "{\n",
-    "    private int _iswellfed;\n",
-    "\n",
-    "    public int IsWellFed\n",
+    "    public Cat(string name, string color, int age) : base(name, color, age)\n",
     "    {\n",
-    "        get { return _iswellfed; }\n",
-    "        set { \n",
-    "            if (value >= 0 && value <= 100)\n",
-    "                _iswellfed = value;\n",
-    "            else\n",
-    "                throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
-    "            }\n",
+    "\n",
     "    }\n",
     "\n",
-    "    public Dog() : base()\n",
+    "    public override string Move()\n",
     "    {\n",
-    "        IsWellFed = 100; \n",
+    "        return $\"{Name} идёт.\";\n",
     "    }\n",
     "\n",
-    "    public void Feed(int amount)\n",
-    "    {\n",
-    "        if (amount >= 0 && (_iswellfed + amount ) <= 100)\n",
-    "                _iswellfed += amount;\n",
-    "        else\n",
-    "            throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
-    "    }\n",
     "}\n",
     "\n",
-    "public class Cat : Animal\n",
+    "public class Dog : Animal, IAnimal\n",
     "{\n",
-    "    private int _iswellfed;\n",
-    "\n",
-    "    public int IsWellFed\n",
+    "    public Dog(string name, string color, int age) : base(name, color, age)\n",
     "    {\n",
-    "        get { return _iswellfed; }\n",
-    "        set { \n",
-    "            if (value >= 0 && value <= 100)\n",
-    "                _iswellfed = value;\n",
-    "            else\n",
-    "                throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
-    "            }\n",
+    "\n",
     "    }\n",
     "\n",
-    "    public Cat() : base()\n",
+    "    public override string Move()\n",
     "    {\n",
-    "        IsWellFed = 100; \n",
+    "        return $\"{Name} идёт.\";\n",
     "    }\n",
     "\n",
-    "    public void Feed(int amount)\n",
-    "    {\n",
-    "        if (amount >= 0 && (_iswellfed + amount ) <= 100)\n",
-    "                _iswellfed += amount;\n",
-    "        else\n",
-    "            throw new ArgumentOutOfRangeException(\"Значение должно быть больше 0 и не превышать 100!\");\n",
-    "    }\n",
     "}\n",
     "\n",
-    "Animal animal = new Animal();\n",
+    "public class Snake : Animal, IAnimal\n",
+    "{\n",
+    "    public Snake(string name, string color, int age) : base(name, color, age)\n",
+    "    {\n",
     "\n",
-    "Animal.DisplayTotalAnimals();\n",
+    "    }\n",
     "\n",
-    "Dog dog = new Dog();\n",
-    "Cat cat = new Cat();\n",
+    "    public override string Move()\n",
+    "    {\n",
+    "        return $\"{Name} ползёт.\";\n",
+    "    }\n",
     "\n",
-    "Animal.DisplayTotalAnimals();\n",
+    "    public override string Info()\n",
+    "    {\n",
+    "        return $\"Это {Name}. Её цвет {Color}. Ей {Age} лет.\";\n",
+    "    }\n",
     "\n",
-    "dog.Name = \"Собака\";\n",
-    "dog.Age = 12;\n",
-    "cat.Name = \"Мурка\";\n",
-    "cat.Age = 3;\n",
-    "animal.Name = \"Животное\";\n",
-    "animal.Age = 1;\n",
+    "}\n",
     "\n",
-    "Console.WriteLine(animal.Name);\n",
-    "Console.WriteLine(animal.Age);\n",
+    "Cat myCat = new Cat(\"Кот\", \"рыжий\", 12);\n",
+    "Console.WriteLine(myCat.Info());\n",
+    "Console.WriteLine(myCat.Move());\n",
+    "Console.WriteLine();\n",
     "\n",
-    "Console.WriteLine(dog.Name);\n",
-    "Console.WriteLine(dog.Age);\n",
+    "Dog myDog = new Dog(\"Пёс\", \"черный\", 5);\n",
+    "Console.WriteLine(myDog.Info());\n",
+    "Console.WriteLine(myDog.Move());\n",
+    "Console.WriteLine();\n",
     "\n",
-    "Console.WriteLine(cat.Name);\n",
-    "Console.WriteLine(cat.Age);"
+    "Snake mySnake = new Snake(\"Змея\", \"зелёный\", 6);\n",
+    "Console.WriteLine(mySnake.Info());\n",
+    "Console.WriteLine(mySnake.Move());\n",
+    "Console.WriteLine();"
    ]
   }
  ],
