--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -62,12 +62,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ID поставщика: 3; Название компании: Silent Hill; Тип продукции: Видеоигры\n",
+      "ID поставщика: 2; Название компании: Silent Hill; Тип продукции: Видеоигры\n",
       "Предоставление котировки на товары или услуги.\n",
       "Отправка заказа поставщику.\n",
       "\n",
       "ID поставщика: 15; Название компании: Biohazard; Тип продукции: Биологическое оружие\n",
-      "Год основания компании 2001.\n",
+      "Год основания компании 2021.\n",
       "Отправка заказа поставщику.\n",
       "\n",
       "ID поставщика: 28; Название компании: CyberLife; Тип продукции: Роботы\n",
@@ -80,35 +80,44 @@
       "\n",
       "Взаимодействие между объектами:\n",
       "Розничный продавец CyberLife делает заказ у производителя Biohazard.\n",
-      "Год основания компании 2001.\n",
+      "Год основания компании 2021.\n",
       "Отправка заказа по адресу: Детроит\n",
       "\n",
       "Импортер Балдёж предлагает свою продукцию Пиво.\n",
       "Предоставление котировки на товары или услуги.\n",
-      "Отправка заказа поставщику.\n"
+      "Отправка заказа поставщику.\n",
+      "\n",
+      "Общее количество транспортных средств: 4\n"
      ]
     }
    ],
    "source": [
-    "using System;\n",
-    "\n",
-    "class Supplier\n",
+    "public class Supplier\n",
     "{\n",
     "    private int supplierid;\n",
     "    private string companyname;\n",
     "    private string producttype;\n",
+    "    \n",
+    "    public static int TotalSuppliers { get; private set; } = 0;\n",
     "\n",
     "    public Supplier(int id, string name, string type)\n",
     "    {\n",
     "        SupplierId = id;\n",
     "        CompanyName = name;\n",
     "        ProductType = type;\n",
+    "        TotalSuppliers++;\n",
     "    }\n",
     "\n",
     "    public int SupplierId\n",
     "    {\n",
     "        get { return supplierid; }\n",
-    "        set { supplierid = value; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                supplierid = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"ID не может быть отрицательным!\");\n",
+    "        }\n",
     "    }\n",
     "\n",
     "    public string CompanyName\n",
@@ -137,14 +146,18 @@
     "    {\n",
     "        Console.WriteLine(\"Отправка заказа поставщику.\");\n",
     "    }\n",
+    "\n",
+    "    public static void DisplayTotalSuppliers()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Общее количество транспортных средств: {TotalSuppliers}\");\n",
+    "    }\n",
     "}\n",
     "\n",
     "class Manufacturer : Supplier\n",
     "{\n",
     "    private int foundedyear;\n",
     "\n",
-    "    public Manufacturer(int id, string name, string type, int year)\n",
-    "        : base(id, name, type)\n",
+    "    public Manufacturer(int id, string name, string type, int year) : base(id, name, type)\n",
     "    {\n",
     "        FoundedYear = year;\n",
     "    }\n",
@@ -152,7 +165,13 @@
     "    public int FoundedYear\n",
     "    {\n",
     "        get { return foundedyear; }\n",
-    "        set { foundedyear = value; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                foundedyear = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Год не может быть отрицательным!\");\n",
+    "        }\n",
     "    }\n",
     "\n",
     "    public override void ProvideQuote()\n",
@@ -165,8 +184,7 @@
     "{\n",
     "    private string storelocation;\n",
     "\n",
-    "    public Retailer(int id, string name, string type, string location)\n",
-    "        : base(id, name, type)\n",
+    "    public Retailer(int id, string name, string type, string location) : base(id, name, type)\n",
     "    {\n",
     "        StoreLocation = location;\n",
     "    }\n",
@@ -187,8 +205,7 @@
     "{\n",
     "    private string origincountry;\n",
     "\n",
-    "    public Importer(int id, string name, string type, string country)\n",
-    "        : base(id, name, type)\n",
+    "    public Importer(int id, string name, string type, string country) : base(id, name, type)\n",
     "    {\n",
     "        OriginCountry = country;\n",
     "    }\n",
@@ -207,14 +224,14 @@
     "\n",
     "\n",
     "// Создание объектов\n",
-    "    Supplier supplier = new Supplier(3, \"Silent Hill\", \"Видеоигры\");\n",
+    "    Supplier supplier = new Supplier(2, \"Silent Hill\", \"Видеоигры\");\n",
     "    supplier.GetCompanyInfo();\n",
     "    supplier.ProvideQuote();\n",
     "    supplier.SubmitOrder();\n",
     "\n",
     "    Console.WriteLine();\n",
     "\n",
-    "    Manufacturer manufacturer = new Manufacturer(15, \"Biohazard\", \"Биологическое оружие\", 2001);\n",
+    "    Manufacturer manufacturer = new Manufacturer(15, \"Biohazard\", \"Биологическое оружие\", 2021);\n",
     "    manufacturer.GetCompanyInfo();\n",
     "    manufacturer.ProvideQuote();\n",
     "    manufacturer.SubmitOrder();\n",
@@ -248,7 +265,11 @@
     "    // Импортер предлагает свою продукцию\n",
     "    Console.WriteLine($\"Импортер {importer.CompanyName} предлагает свою продукцию {importer.ProductType}.\");\n",
     "    supplier.ProvideQuote();\n",
-    "    importer.SubmitOrder();"
+    "    importer.SubmitOrder();\n",
+    "\n",
+    "    Console.WriteLine();\n",
+    "\n",
+    "    Supplier.DisplayTotalSuppliers();"
    ]
   }
  ],
